# cc-parser

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.agents/skills/add-bank-parser/: SKILL.md
cc_parser/: __init__.py  browser.py  cli.py  extractor.py
cc_parser/parsers/: __init__.py  axis.py  base.py  bob.py  candidate_generation.py  cards.py  extraction.py  factory.py  generic.py  hdfc.py  hsbc.py  icici.py  idfc.py  indusind.py  jupiter.py  match_selection.py  models.py  narration.py  reconciliation.py  sbi.py  scoring_constants.py  scoring_engine.py  similarity_metrics.py  slice.py  ssfb.py  tokens.py  transaction_id_generator.py  yesbank.py
docs/: output-schema.md  parsing-notes.md
tests/: test_adjustment_pairing.py  test_browser.py  test_contracts.py
web/: app.js  build.sh  index.html  storage.js  worker.js
